...
    <string name="profile_contract_date_expired">Contract Is Verlopen</string>

    <!--Update Profile-->
    <string name="update_profile_title">Profiel aanpassen</string>
    <string name="update_profile_header_label">Gegevens Aanpassen</string>
    <string name="update_profile_firstname_required">Voornaam is verplicht</string>
    <string name="update_profile_firstname_minlength">Voornaam is minstens %1d karakters lang</string>
    <string name="update_profile_lastname_required">Familienaam is verplicht</string>
    <string name="update_profile_lastname_minlength">Familienaam is minstens %1d karakters lang</string>
    <string name="update_profile_phone_required">Telefoon is verplicht</string>
    <string name="update_profile_phone_minlength">Telefoon is minimum %1d cijfers lang</string>
    <string name="update_profile_phone_maxlength">Telefoon is maximum %1d cijfers lang</string>
    <string name="update_profile_email_required">Email is verplicht</string>
...
